# telegram-bot-pokemon-go-infos

./: Procfile  bot.py  info_json.py  main.py  package.json  pyproject.toml  requirements.txt  runserver.py
.github/workflows/: codeql-analysis.yml
functions/: quadro_resposta.py  tradutor.py
table/: info_json.py  ler_montar_table.txt  montar_json.xlsx
